card.scss :: fix for text-align

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -4,6 +4,7 @@
   width: 250px;
   border: 1px solid #f5f5f5;
   margin: 8px;
+  text-align: center;
 
   &-image {
     width: 100%;
